--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -6,9 +6,163 @@
 @import '../blocks/**/*'
 
 .container
-    padding 0 10px
-    @media (min-width 1200px)
+    padding 0 20px
+    @media (min-width 1160px)
         padding 0
-    max-width 1200px
+    max-width 1160px
     margin auto
     width 100%
+
+.header
+    width 100%
+    background #fff
+    box-shadow:0px 2px 6.96px 1.04px rgba(18, 16, 11, 0.08)
+    height auto
+    .container
+        min-height 59px
+        height auto
+        display flex
+        align-items center
+        justify-content space-between
+
+.hamburger
+    width 24px
+    height 16px
+    position relative
+    &__plank
+        position absolute
+        width 100%
+        height 2px
+        background #2b519e
+        &:nth-child(1)
+            top 0px
+        &:nth-child(2)
+            top 7px
+        &:nth-child(3)
+            top 14px
+    &_open
+        .hamburger__plank
+            &:nth-child(1)
+                top 7px
+                transform rotate(-45deg)
+            &:nth-child(2)
+                display none
+            &:nth-child(3)
+                top 7px
+                transform rotate(45deg)
+
+.logo
+    width 50px
+    height 45px
+    background-image url(../images/logo-mobile.png)
+    background-size contain
+    margin 0 20px
+
+.phone
+    flex-grow 1
+    display flex
+    justify-content flex-end
+    &__icon
+        width 20px
+        height 19px
+        background-image url(../images/phone.png)
+        background-size contain
+        margin 0 10px
+    &__text
+        color #000
+        font-size 16px
+        line-height 1em
+        font-weight 700
+
+
+.offer
+    width 100%
+    height 400px
+    background #7886ef
+    &__wrapper
+        display flex
+        align-items center
+        justify-content center
+        flex-direction column
+        height 100%
+    &__title
+        font-size 24px
+        line-height 1.2em
+        color #fff 
+        font-weight 700
+        margin-bottom 20px
+        text-shadow 0px 0px 10px rgba(60, 60, 60, 0.4)
+    &__description
+        font-size 20px
+        line-height 1.2em
+        color #fff 
+        font-weight 300
+        margin-bottom 40px
+        text-shadow 0px 0px 10px rgba(60, 60, 60, 0.3)
+    &__btn
+        width 100%
+
+.btn
+    padding 1em 2em
+    border-radius 4px
+    position relative
+    user-select none
+    overflow hidden
+    cursor pointer
+    display inline-block
+    &__text
+        font-size 15px
+        line-height 1.2em
+        position relative
+        z-index 10
+        font-weight 600
+        transition-delay 2ms
+        text-align center
+    &:after
+        content ""
+        position absolute
+        height 0%
+        left 50%
+        top 50%
+        width 0
+        border-radius 50%
+        opacity 0
+        transition all .8s ease 0s
+        transform translateX(-50%) translateY(-50%)
+        z-index 5
+    &:hover
+        &:after
+            height 450%
+            width 110%
+            opacity 1    
+        .btn__text
+            color #fff
+    &_view
+        &_action
+            border 2px solid #a61713
+            .btn__text
+                color #a61713
+            &:after
+                background #a61713
+            &:hover
+                .btn__text
+                    color #fff            
+        &_pseudo
+            border 2px solid #4273d6
+            .btn__text
+                color #4273d6
+            &:after
+                background #4273d6
+            &:hover
+                .btn__text
+                    color #fff
+        &_light
+            background rgba(0, 0, 0, 0.2)
+            border 2px solid #fff
+            .btn__text
+                color #fff
+            &:after
+                background #fff
+            &:hover
+                .btn__text
+                    color #000
