--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -24,7 +24,17 @@
         display flex
         align-items center
         justify-content space-between
-
+    &__right
+        flex-grow 1
+        display flex
+        justify-content flex-end
+        flex-direction column
+    &__description
+        font-size 10px
+        color #272727
+        line-height 1.1em
+        margin-bottom 6px
+        text-align right
 .hamburger
     width 24px
     height 16px
@@ -50,31 +60,52 @@
             &:nth-child(3)
                 top 7px
                 transform rotate(45deg)
-
 .logo
     width 50px
     height 45px
     background-image url(../images/logo-mobile.png)
+    background-repeat no-repeat
     background-size contain
     margin 0 20px
 
 .phone
-    flex-grow 1
     display flex
     justify-content flex-end
+    //margin-bottom 10px
     &__icon
         width 20px
         height 19px
         background-image url(../images/phone.png)
+        background-repeat no-repeat
         background-size contain
-        margin 0 10px
+        margin -1px 10px 0 0
     &__text
+        display inline-block
         color #000
         font-size 16px
         line-height 1em
         font-weight 700
+.maps
+    display none
+    // display flex
+    // justify-content flex-end
 
-
+    // align-items center
+    //justify-content center
+    //flex-direction column
+    &__icon
+        width 20px
+        height 19px
+        background-image url(../images/phone.png)
+        background-repeat no-repeat
+        background-size contain
+        margin 0 10px
+    &__text
+        display inline-block
+        color #000
+        font-size 14px
+        line-height 1.2em
+        font-weight 600
 .offer
     width 100%
     height 400px
@@ -99,9 +130,8 @@
         font-weight 300
         margin-bottom 40px
         text-shadow 0px 0px 10px rgba(60, 60, 60, 0.3)
-    &__btn
-        //width 100%
-
+    // &__btn
+    //     //width 100%
 .btn
     padding 1em 1.2em
     border-radius 4px
