--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -17,6 +17,8 @@ block content
                 +b.maps
                     +e.icon 
                     +e.text Ростов-на-дону <br>ул.Текучева, 23, эт. 3
+    .nav
+    
     +b.offer
         +e.wrapper.container
             +e.title Проектно-строительная компания
@@ -35,5 +37,16 @@ block content
                 +e({tag:'a'}).item О нас
                 +e.separator 
                 +e({tag:'a'}).item О нас
+
+    .footer
+        .container 123
+    .copyright
+        .container 
+            |copyright © 2019 bY BK Invent LLC.
+            br 
+            |Все права защищены. 
+            br
+            |Запрещено любое копирование материалов ресурса без письменного согласия владельца — ООО "БК Инвент".
+
     +scripts(['common.js', 'app.js'])
 
