--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -2,6 +2,7 @@
 @import 'helpers/mixins'
 @import 'helpers/fonts'
 @import 'helpers/normalize'
+@import 'helpers/smart-grid'
 
 @import '../blocks/**/*'
 
@@ -12,6 +13,7 @@
     max-width 1160px
     margin auto
     width 100%
+
 
 .header
     width 100%
@@ -35,6 +37,7 @@
         line-height 1.1em
         margin-bottom 6px
         text-align right
+        display none
 .hamburger
     width 24px
     height 16px
@@ -236,3 +239,13 @@
             transform rotate(-38deg)
             bottom 0
 
+.footer
+    background #e7e7e7
+    padding 20px 0
+
+.copyright
+    background #545358
+    color #ffffff
+    font-size 13px
+    line-height 1.3em
+    padding 15px 0
