--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -17,8 +17,42 @@ block content
                 +b.maps
                     +e.icon 
                     +e.text Ростов-на-дону <br>ул.Текучева, 23, эт. 3
-    .nav
-    
+    .nav.nav
+        //- .nav__header
+        //-     .nav__back
+        //-     .icon-close
+        +b.menu
+            +e.item
+                +e({tag: 'a'}).link.menu__link_arrow О нас
+                +b.submenu.menu__submenu
+                    +e.item
+                        +e({tag: 'a'}).link.submenu__link_arrow Акции
+                        +b.submenu.submenu__submenu
+                            +e.item
+                                +e({tag: 'a'}).link Акции   
+                            +e.item
+                                +e({tag: 'a'}).link Акции
+                            +e.item
+                                +e({tag: 'a'}).link Акции   
+                    +e.item
+                        +e({tag: 'a'}).link Акции
+                    +e.item
+                        +e({tag: 'a'}).link Акции
+            +e.item
+                +e({tag: 'a'}).link Полезные статьи
+            +e.item
+                +e({tag: 'a'}).link.menu__link_arrow Акции
+                +b.submenu.menu__submenu
+                    +e.item
+                        +e({tag: 'a'}).link Акции   
+                    +e.item
+                        +e({tag: 'a'}).link Акции
+                    +e.item
+                        +e({tag: 'a'}).link Акции
+            +e.item
+                +e({tag: 'a'}).link Партнерам
+            +e.item
+                +e({tag: 'a'}).link Контакты                
     +b.offer
         +e.wrapper.container
             +e.title Проектно-строительная компания
