--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -72,6 +72,12 @@ block content
                 +e.separator 
                 +e({tag:'a'}).item О нас
 
+            h1 Проектно-строительная компания
+            h2 Проектно-строительная компания
+            h3 Проектно-строительная компания
+            h4 Проектно-строительная компания
+            p Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет оценить значение дальнейших направлений развития. Таким образом начало повседневной работы по формированию позиции представляет собой интересный эксперимент проверки позиций, занимаемых участниками в отношении поставленных задач. С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный <a>эксперимент</a> проверки форм развития. Повседневная практика показывает, что сложившаяся структура организации требуют от нас анализа модели развития. Разнообразный и богатый опыт укрепление и развитие структуры способствует подготовки и реализации систем массового участия.
+
     .footer
         .container 123
     .copyright
