--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -214,11 +214,35 @@
                     color #000
 .content
     padding 20px 0 
+    font-size 13px
+    line-height 1.6em
+    h1
+    h2
+    h3
+    h4
+        margin 0.67em 0
+    h1
+        font-size 1.884em
+    h2
+        font-size 1.4em
+    h3
+        font-size 1.21em
+    h4
+        font-size 1.11em
+    p
+        line-height 1.692em
+        font-size 1em
+    a
+     color #2e64d0
+     border bottom 1px solid #2e64d0
+
+
 .breadcrumbs
     width 100%
     display flex
     flex-direction row
     align-items center
+    margin-bottom 40px
     &__item
         font-size 14px
         line-height 1.2em
