--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -63,20 +63,31 @@ block content
     //-     +e.text Записаться на консультацию
     //- +b.btn.btn_view_pseudo
     //-     +e.text Записаться на консультацию
+    
+    .container
+        +b.breadcrumbs
+            +e.home
+            +e.separator
+            +e({tag:'a'}).item О нас
+            +e.separator 
+            +e({tag:'a'}).item О нас
     .content
         .container
-            +b.breadcrumbs
-                +e.home
-                +e.separator
-                +e({tag:'a'}).item О нас
-                +e.separator 
-                +e({tag:'a'}).item О нас
-
             h1 Проектно-строительная компания
             h2 Проектно-строительная компания
             h3 Проектно-строительная компания
             h4 Проектно-строительная компания
-            p Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет оценить значение дальнейших направлений развития. Таким образом начало повседневной работы по формированию позиции представляет собой интересный эксперимент проверки позиций, занимаемых участниками в отношении поставленных задач. С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный <a>эксперимент</a> проверки форм развития. Повседневная практика показывает, что сложившаяся структура организации требуют от нас анализа модели развития. Разнообразный и богатый опыт укрепление и развитие структуры способствует подготовки и реализации систем массового участия.
+            p Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет оценить значение дальнейших направлений развития. Таким образом начало повседневной работы по формированию позиции представляет собой интересный эксперимент проверки позиций, занимаемых участниками в отношении поставленных задач. <a>С другой стороны</a> постоянное <b>информационно-пропагандистское</b> обеспечение нашей деятельности представляет собой интересный <a href='/'>эксперимент</a> проверки форм развития. Повседневная практика показывает, что сложившаяся структура организации требуют от нас анализа модели развития. Разнообразный и богатый опыт укрепление и развитие структуры способствует подготовки и реализации систем массового участия.
+            ul.list.list_type_check
+                li 123
+                li Повседневная практика показывает, что сложившаяся структура организации требуют от нас анализа модели развития. Разнообразный и богатый опыт укрепление и развитие структуры способствует подготовки и реализации систем массового участия.
+                li 123
+            ul.list
+                li 123
+                li 123
+                li Повседневная практика показывает, что сложившаяся структура организации требуют от нас анализа модели развития. Разнообразный и богатый опыт укрепление и развитие структуры способствует подготовки и реализации систем массового участия.
+            img(src="http://farm8.static.flickr.com/7907/33535681578_4091be1523_b.jpg")
+            blockquote По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых людей недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповт оримый колорит советских времен.
 
     .footer
         .container 123
