--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -6,9 +6,6 @@
 
 @import '../blocks/**/*'
 
-.page
-    min-height 20000000px
-
 .modal-open 
     overflow hidden
 
@@ -214,13 +211,15 @@
                     color #000
 .content
     padding 20px 0 
-    font-size 13px
+    font-size 14px
     line-height 1.6em
+    color #121212
     h1
     h2
     h3
     h4
         margin 0.67em 0
+        color #1f1f1f
     h1
         font-size 1.884em
     h2
@@ -232,9 +231,48 @@
     p
         line-height 1.692em
         font-size 1em
+        margin-bottom 1em
+
     a
-     color #2e64d0
-     border bottom 1px solid #2e64d0
+        color #2e64d0
+        text-decoration underline
+        cursor pointer
+        &:visited
+            color #52346c
+        // &:active
+    b
+        font-weight 800
+    img 
+        margin-bottom 1em
+        border-radius 4px
+        width 100%
+        max-width 100%
+    blockquote
+        border-left 4px solid #4273d6
+        padding-left 16px
+        line-height 1.5em
+        margin-bottom 1em
+
+
+ul.list
+    //padding-left 10px
+    margin-bottom 1em
+    li
+        padding-left 1.714em
+        list-style-type none
+        background  url(../images/list-item.svg) 0.14em  0.143em no-repeat
+        background-size 1.35em 
+        margin-bottom 1em
+        line-height 1.6
+
+    &_type
+        &_check
+            li
+                padding-left 1.714em
+                list-style-type none
+                background  url(../images/list-item-check.svg) left top no-repeat
+                background-size 1.62em 
+
 
 
 .breadcrumbs
@@ -242,7 +280,7 @@
     display flex
     flex-direction row
     align-items center
-    margin-bottom 40px
+    margin 20px 0 10px 0
     &__item
         font-size 14px
         line-height 1.2em
